change some settings